--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <header>
+        
+        <img src="https://s.svgbox.net/heropatterns.svg?ic=steel-beams&fill=0f0" width="64" height="64">
         <img class="activator" id="activator" src="//s.svgbox.net/hero-outline.svg?fill=fff#menu-alt-1" alt="">
         <nav>
             <ul>
